added style.css and started part 1 styling

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page | AeroDyn4mic</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div>
+  <div class="part-1">
     <nav>
-      <p>Header Logo</p>
-      <ul>
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
+      <p class="header-text">Header Logo</p>
+      <ul class="header-list">
+        <li class="header-list-flex"><a href="">header link one</a></li>
+        <li class="header-list-flex"><a href="">header link two</a></li>
+        <li class="header-list-flex"><a href="">header link three</a></li>
       </ul>
     </nav>
 
