--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </nav>
 
     <div class="hero">
-      <div class="hero-text">
-        <p>This website is awesome</p>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button type="button">Sign up</button>
+      <div class="hero-content">
+        <p class="hero-title">This website is awesome</p>
+        <p class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button type="button" class="hero-button">Sign up</button>
       </div>
 
       <div class="hero-img">
