--- a/index.html
+++ b/index.html
@@ -33,8 +33,29 @@
     </div>
   </div>
 
-  <div>
-    <p>Part 2</p>
+  <div class="random-info">
+    <div class="random-info-title">
+      <p>Some random information.</p>
+    </div>
+
+    <div class="info-container">
+      <div class="info-item">
+        <div class="item-img"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="info-item">
+        <div class="item-img"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="info-item">
+        <div class="item-img"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="info-item">
+        <div class="item-img"></div>
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+    </div>
   </div>
 
   <div>
