--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
     <div class="info-container">
       <div class="info-item">
         <div class="item-img"></div>
-        <p>this is some subtext under an illustration or image</p>
+        <p class="img-text">this is some subtext under an illustration or image</p>
       </div>
       <div class="info-item">
         <div class="item-img"></div>
-        <p>this is some subtext under an illustration or image</p>
+        <p class="img-text">this is some subtext under an illustration or image</p>
       </div>
       <div class="info-item">
         <div class="item-img"></div>
-        <p>this is some subtext under an illustration or image</p>
+        <p class="img-text">this is some subtext under an illustration or image</p>
       </div>
       <div class="info-item">
         <div class="item-img"></div>
-        <p>this is some subtext under an illustration or image</p>
+        <p class="img-text">this is some subtext under an illustration or image</p>
       </div>
     </div>
   </div>
