finished quote section

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
     </div>
   </div>
 
-  <div>
-    <p>Part 3</p>
+  <div class="quote-section">
+    <div class="quote">This is an isnpiring quote, or a testimonial from a costumer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+
+  <div class="quote-author">-Thor, God of Thunder</div>
   </div>
 
   <div>
