--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
         <li class="header-list-flex"><a href="">header link three</a></li>
       </ul>
     </nav>
-
     <div class="hero">
       <div class="hero-content">
         <p class="hero-title">This website is awesome</p>
         <p class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
         <button type="button" class="hero-button">Sign up</button>
       </div>
-
       <div class="hero-img">
         <p>this is a placeholder for an image</p>
       </div>
@@ -37,7 +35,6 @@
     <div class="random-info-title">
       <p>Some random information.</p>
     </div>
-
     <div class="info-container">
       <div class="info-item">
         <div class="item-img"></div>
@@ -60,12 +57,15 @@
 
   <div class="quote-section">
     <div class="quote">This is an isnpiring quote, or a testimonial from a costumer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-
   <div class="quote-author">-Thor, God of Thunder</div>
   </div>
 
-  <div>
-    <p>Part 4</p>
+  <div class="call-action-section">
+    <div class="call-action-text">
+      <p class="call-action-title">Call to action! It's time!</p>
+      <p class="call-action-subtext">Sign up for our product by clicking that button right over there!</p>
+    </div>
+    <button type="button" class="call-action-button">Sign up</button>
   </div>
 
   <footer>
