--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </div>
 
   <footer>
-    <p>Footer</p>
+    <p class="footer-text">Copyright © The Odin Project 2021</p>
   </footer>
 </body>
 </html>
